# CPPClient

./: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/curl/: CMakeLists.txt
libraries/curl/lib/: libcurl.exp  libcurl.lib
libraries/rapidjson/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/client/: BodyParams.h  CMakeLists.txt  Client.h  ClientHTTP.cpp  ClientHTTP.h  CurlBodyMessage.h  CurlHeaderMessage.h  CurlMessage.h  CurleThrower.h  GetRequest.h  HTTPBody.h  HTTPClient.cpp  HTTPClient.h  HTTPGetMethod.cpp  HTTPGetMethod.h  HTTPHeader.h  HTTPMethods.cpp  HTTPMethods.h  HTTPPostMethod.cpp  HTTPPostMethod.h  HTTPStatusCode.h  Header.h  HeaderParams.h  Host.cpp  Host.h  MessageComposer.h  MethodRequest.cpp  MethodRequest.h  PostRequest.h  QueryString.h  Reply.h  Request.h  Response.h  UserAgent.cpp  UserAgent.h  WebRequestClient.cpp  WebRequestClient.h
